added image over effect

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
       <div class="page1">
         <div class="left-content">
           <h1>
-            Modern Interior <br />
-            Design Studio
+            Modern Interior Design Studio
           </h1>
           <p>
             We specialize in delivering innovative design solutions that
@@ -91,7 +90,7 @@
             <img src="./images/product-3.png" alt="" />
             <p>
               ergonomic Chair <br />
-              ₹ 12000 r
+              ₹ 12000
             </p>
 <i class="ri-add-circle-line"></i>
           </div>
