added blog section and testimonial secton

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editingdevelopment</title>
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="shortcut icon" href="" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
@@ -41,9 +44,7 @@
       </div>
       <div class="page1">
         <div class="left-content">
-          <h1>
-            Modern Interior Design Studio
-          </h1>
+          <h1>Modern Interior Design Studio</h1>
           <p>
             We specialize in delivering innovative design solutions that
             harmonize functionality and aesthetics.
@@ -76,7 +77,7 @@
               Nordic Chair <br />
               ₹ 15000
             </p>
-<i class="ri-add-circle-line"></i>
+            <i class="ri-add-circle-line"></i>
           </div>
           <div class="card">
             <img src="./images/product-2.png" alt="" />
@@ -84,7 +85,7 @@
               kruzo aero Chair <br />
               ₹ 10000
             </p>
-<i class="ri-add-circle-line"></i>
+            <i class="ri-add-circle-line"></i>
           </div>
           <div class="card">
             <img src="./images/product-3.png" alt="" />
@@ -92,84 +93,190 @@
               ergonomic Chair <br />
               ₹ 12000
             </p>
-<i class="ri-add-circle-line"></i>
+            <i class="ri-add-circle-line"></i>
           </div>
         </div>
       </div>
 
+      <div class="page3">
+        <div class="left">
+          <h1>Why Choose Us</h1>
+          <p>
+            Our team of seasoned professionals is dedicated to translating your
+            vision into reality, offering personalized solutions tailored to
+            your unique style.
+          </p>
 
-<div class="page3">
-<div class="left">
+          <div class="content-container">
+            <div class="content">
+              <img class="icon" src="./images/truck.svg" alt="" />
+              <p class="p">fast & free shipping</p>
+              <p class="ccc">
+                Experience the delight of swift and complimentary delivery with
+                our free and fast shipping service.
+              </p>
+            </div>
+            <div class="content">
+              <img class="icon" src="./images/bag.svg" alt="" />
+              <p class="p">easy to shop</p>
+              <p class="ccc">
+                Our user-friendly interface and intuitive design make it
+                effortlessly easy to find, choose, and order your favorite items
+              </p>
+            </div>
+            <div class="content">
+              <img class="icon" src="./images/support.svg" alt="" />
+              <p class="p">24/7 support</p>
+              <p class="ccc">
+                Experience unparalleled accessibility with our 24/7 commitment
+                to customer support.
+              </p>
+            </div>
+            <div class="content">
+              <img class="icon" src="./images/return.svg" alt="" />
+              <p class="p">hassale free return</p>
+              <p class="ccc">
+                Enjoy the convenience of hassle-free returns with our
+                customer-friendly policy.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <img src="./images/why-choose-us-img.jpg" alt="" />
+        </div>
+      </div>
 
-  <h1>Why Choose Us</h1>
-  <p> Our team of seasoned professionals is dedicated to translating your vision into reality, offering personalized solutions tailored to your unique style. </p>
+      <div class="page4">
+        <div class="left">
+          <img class="first" src="./images/img-grid-1.jpg" alt="" />
+          <img class="second" src="./images/img-grid-2.jpg" alt="" />
+          <img
+            class="third"
+            class="second"
+            src="./images/img-grid-3.jpg"
+            alt=""
+          />
+        </div>
+        <div class="right">
+          <h1>We Help You Make Modern Interior Design</h1>
+          <p>
+            Embark on a transformative journey with us as we guide you to make
+            modern interior design a personalized reality. Our dedicated team is
+            committed to curating a seamless experience, offering expert advice
+            and a carefully selected range of modern furnishings and decor.
+          </p>
 
-<div class="content-container">
-<div class="content">
-<img class="icon"  src="./images/truck.svg" alt="">
-<p class="p">fast & free shipping</p>
-<p class="ccc">
-  Experience the delight of swift and complimentary delivery with our free and fast shipping service.
-</p>
-</div>
-<div class="content">
-<img  class="icon" src="./images/bag.svg" alt="">
-  <p class="p">easy to shop</p>
-  <p class="ccc">
-    Our user-friendly interface and intuitive design make it effortlessly easy to find, choose, and order your favorite items
-  </p>
-</div>
-<div class="content">
-<img  class="icon" src="./images/support.svg" alt="">
-  <p class="p">24/7 support</p>
-  <p class="ccc">
-    Experience unparalleled accessibility with our 24/7 commitment to customer support. 
-  </p>
-</div>
-<div class="content">
-  <img  class="icon" src="./images/return.svg" alt="">
-  <p  class="p"> hassale free return</p>
-  <p class="ccc">
-    Enjoy the convenience of hassle-free returns with our customer-friendly policy.</p>
-</div>
+          <ul>
+            <li>
+              Our dedicated team is committed to transforming your living spaces
+              with contemporary flair and innovative solutions.
+            </li>
 
-</div>
+            <li>
+              Empowering your creative vision, we specialize in helping you make
+              modern interior design a reality.
+            </li>
 
-</div>
-<div class="right">
-<img src="./images/why-choose-us-img.jpg" alt="">
+            <li>
+              With a keen eye for detail and a passion for modern aesthetics, we
+              turn your ideas into stylish, functional spaces
+            </li>
+            <li>
+              Embrace the latest trends and timeless elegance as we collaborate
+              to create a home that reflects your unique style and personality.
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="page5">
+        <h3>Testimonials</h3>
 
-</div>
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <p class="slider-p">
+                I was skeptical about online interior design, but the modern
+                interior web page exceeded my expectations. The user-friendly
+                interface allowed me to explore a plethora of contemporary
+                styles, ultimately helping me create a home that reflects my
+                unique taste.
+                <img
+                  src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bW9kZWx8ZW58MHx8MHx8fDA%3D"
+                  alt=""
+                />
+              </p>
+              <h4>Rose</h4>
+            </div>
+            <div class="swiper-slide">
+              <p class="slider-p">
+                The modern interior web page is a game-changer! It seamlessly
+                blends form and function, providing a curated selection of
+                furnishings and decor that effortlessly elevate any space. My
+                home has never looked more chic and inviting.
+                <img
+                  src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8bW9kZWx8ZW58MHx8MHx8fDA%3D"
+                  alt=""
+                />
+              </p>
+              <h4>Mraia</h4>
+            </div>
+            <div class="swiper-slide">
+              <p class="slider-p">
+                Kudos to the modern interior web page for making interior design
+                accessible and enjoyable. The variety of styles, intuitive
+                layout, and insightful tips turned my vision into reality. My
+                home is now a testament to the power of innovative online design
+                platforms
+                <img
+                  src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fG1vZGVsfGVufDB8fDB8fHww"
+                  alt=""
+                />
+              </p>
+              <h4>Jck</h4>
+            </div>
+            <div class="swiper-slide">
+              <p class="slider-p">
+                Navigating the modern interior web page was a breeze, and the
+                curated collections inspired my home transformation. The
+                attention to detail and user-friendly features made the entire
+                process enjoyable, resulting in a space that now exudes modern
+                elegance.
+                <img
+                  src="https://images.unsplash.com/photo-1512316609839-ce289d3eba0a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzF8fG1vZGVsfGVufDB8fDB8fHww"
+                  alt=""
+                />
+              </p>
+              <h4>Suji</h4>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class="blog">
+        <h1>Recent Blog</h1>
 
-</div>
+        <a href="#"><h2>View all post</h2></a>
 
-<div class="page4">
+        <div class="blg-container">
+          <div class="elem">
+            <img src="./images/post-1.jpg" alt="" />
+            <h5>First Time Home Owner Ideas <span>by</span> Kristin Watson <span>on</span> Dec 19, 2020</h5>
+          </div>
+          <div class="elem">
+            <img src="./images/post-2.jpg" alt="" />
+            <h5>Home decoration Ideas <span>by</span> Kristin Watson <span>on</span> Dec 19, 2021</h5>
+          </div>
+          <div class="elem">
+            <img src="./images/post-3.jpg" alt="" />
+            <h5>Home paint ideas <span>by</span> Kristin Watson <span>on</span> Dec 19, 2023</h5>
+          </div>
+        </div>
+      </div>
 
-<div class="left">
-  <img class="first" src="./images/img-grid-1.jpg" alt="">
-  <img class="second" src="./images/img-grid-2.jpg" alt="">
-  <img class="third" class="second" src="./images/img-grid-3.jpg" alt="">
+<div class="footer">
 
-</div>
-<div class="right">
-
-  <h1>We Help You Make Modern Interior Design</h1>
-  <p>Embark on a transformative journey with us as we guide you to make modern interior design a personalized reality. Our dedicated team is committed to curating a seamless experience, offering expert advice and a carefully selected range of modern furnishings and decor.</p>
-
-  <ul> 
-    <li>Our dedicated team is committed to transforming your living spaces with contemporary flair and innovative solutions.</li>
-
-    <li>Empowering your creative vision, we specialize in helping you make modern interior design a reality.</li>
-
-    <li>With a keen eye for detail and a passion for modern aesthetics, we turn your ideas into stylish, functional spaces</li>
-    <li>Embrace the latest trends and timeless elegance as we collaborate to create a home that reflects your unique style and personality.</li>
-  </ul>
-</div>
-
-
-
-
+  
 </div>
 
     </div>
@@ -178,6 +285,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
 
