--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editingdevelopment</title>
+<link rel="shortcut icon" href="./logo.png" type="image/x-icon">
+
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -261,24 +263,90 @@
         <div class="blg-container">
           <div class="elem">
             <img src="./images/post-1.jpg" alt="" />
-            <h5>First Time Home Owner Ideas <span>by</span> Kristin Watson <span>on</span> Dec 19, 2020</h5>
+            <h5>
+              First Time Home Owner Ideas <span>by</span> Kristin Watson
+              <span>on</span> Dec 19, 2020
+            </h5>
           </div>
           <div class="elem">
             <img src="./images/post-2.jpg" alt="" />
-            <h5>Home decoration Ideas <span>by</span> Kristin Watson <span>on</span> Dec 19, 2021</h5>
+            <h5>
+              Home decoration Ideas <span>by</span> Kristin Watson
+              <span>on</span> Dec 19, 2021
+            </h5>
           </div>
           <div class="elem">
             <img src="./images/post-3.jpg" alt="" />
-            <h5>Home paint ideas <span>by</span> Kristin Watson <span>on</span> Dec 19, 2023</h5>
+            <h5>
+              Home paint ideas <span>by</span> Kristin Watson
+              <span>on</span> Dec 19, 2023
+            </h5>
           </div>
         </div>
       </div>
 
-<div class="footer">
+      <div class="footer">
+        <div class="first-line">
+          <div class="massage">
+            <h1>
+              <img src="./images/envelope-outline.svg" alt="" /> Subscribe to
+              Newsletter
+            </h1>
+            <div class="input">
+              <input type="text" placeholder="enter your name" />
+              <input type="text" placeholder="enter your massage" />
+              <div class="snd"><i class="ri-send-plane-fill"></i></div>
+            </div>
+          </div>
 
-  
-</div>
+          <img class="sofa" src="./images/sofa.png" alt="" />
+        </div>
+        <h1 class="ftr-hed">Modern Interior</h1>
+        <div class="second-line">
+          <div class="social-media">
+            <p class="paraftr">
+              🌟 Elevate Your Space with Timeless Elegance! 🏡✨ Welcome to
+              <span>modern Interior</span> where dreams meet design! Our passion
+              is to transform your living spaces into stunning masterpieces that
+              reflect your unique style and personality.
+            </p>
+            <div class="social-icons">
+              <i class="ri-facebook-circle-fill"></i>
+              <i class="ri-twitter-fill"></i>
+              <i class="ri-instagram-fill"></i>
+              <i class="ri-linkedin-box-fill"></i>
+            </div>
+          </div>
 
+          <div class="about-us section">
+            <a href="#">About Us</a>
+            <a href="">Services</a>
+            <a href="">Blog</a>
+            <a href="">Contact Us</a>
+          </div>
+
+          <div class="support section">
+            <a href="#">support</a><a href="#">Knowledge base</a
+            ><a href="#">Live chat</a>
+          </div>
+
+          <div class="jobs section">
+            <a href="#">jobs</a>
+            <a href="#">our Team</a>
+            <a href="#">leadership</a>
+            <a href="#">Privacy & policy</a>
+          </div>
+
+          <div class="last section">
+            <a href="#">Nordic Chair</a>
+            <a href="#">kruzo aero</a>
+            <a href="#">Ergonomic Chair</a>
+          </div>
+        </div>
+
+<p class="ccc">copyright©️ editingdevelopment 2024</p>
+
+      </div>
     </div>
 
     <!--  JavaScript Starts -->
